NCC/NCCjudge/judge/error/23/23_2.txt
/home/saurabh/CTD/NCC/judge/user/23/2/23_2.cpp:1:25: error: ‘DFRGDFGDFFDGGD’ does not name a type
 /*Type your code here!*/DFRGDFGDFFDGGD
                         ^
